--- a/kexts/AppleALC.kext/Contents/Info.plist
+++ b/kexts/AppleALC.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>18E226</string>
+	<string>19D76</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -29,17 +29,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10E1001</string>
+	<string>11C504</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>18E219</string>
+	<string>19B90</string>
 	<key>DTSDKName</key>
-	<string>macosx10.14</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1020</string>
+	<string>1130</string>
 	<key>DTXcodeBuild</key>
-	<string>10E1001</string>
+	<string>11C504</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>HDA Hardware Config Resource</key>
@@ -1330,16 +1330,6 @@
 					<string>Jake Lo - Realtek ALC236</string>
 					<key>CodecID</key>
 					<integer>283902518</integer>
-					<key>ConfigData</key>
-					<data>
-					ASccEAEnHQEBJx6gAScfkAE3HPABNx0AATce
-					AAE3H0ABRxwwAUcdAQFHHhABRx+QAUcMAgGH
-					HPABhx0AAYceAAGHH0ABlxwgAZcdMAGXHosB
-					lx8BAacc8AGnHQABpx4AAacfQAG3HPABtx0A
-					AbceAAG3H0AB1xzwAdcdAAHXHgAB1x9AAecc
-					8AHnHQAB5x4AAecfQAIXHEACFx1AAhceKwIX
-					HwECFwwCABcgAAAXIXIAFyJrABcjEA==
-					</data>
 					<key>FuncGroup</key>
 					<integer>1</integer>
 					<key>LayoutID</key>
@@ -1376,7 +1366,7 @@
 					<integer>13</integer>
 					<key>WakeConfigData</key>
 					<data>
-					AUcMAg==
+					AUcMAgGXByUCFwiD
 					</data>
 					<key>WakeVerbReinit</key>
 					<true/>
@@ -10807,6 +10797,8 @@
 			<string>IOKit</string>
 		</dict>
 	</dict>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.8</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017 vit9696. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
